# FastAPI

./: README.md  app.py  main.py  model.ipynb  patients.json  requirements.txt
flaskapp/: Dockerfile  app.py
project1/: .env  main.py  pyproject.toml  test.db
project1/app/: app.py  db.py  schemas.py
pydantic/: Fieldvalidater.py  computed_field.py  model_validator.py  nested_models.py  pydan.py  serialization.py
