[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.8.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
